files/script/test/parse_error/comment/test_comment_error1.ll


def main()
{
}
#script("test/parse_error/comment/test_comment_error1.nl")